[tool.poetry]
name = "pct-data"
version = "0.1.0"
description = ""
authors = ["narner90 <nateharner01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
stravalib = "0.10.4"
flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
